--- a/.obsidian/appearance.json
+++ b/.obsidian/appearance.json
@@ -1,5 +1,6 @@
 {
   "accentColor": "",
-  "theme": "moonstone",
-  "baseFontSize": 16
+  "theme": "system",
+  "baseFontSize": 16,
+  "cssTheme": "Minimal"
 }
