--- a/.obsidian/appearance.json
+++ b/.obsidian/appearance.json
@@ -1,6 +1,6 @@
 {
   "accentColor": "#707070",
-  "theme": "moonstone",
+  "theme": "system",
   "baseFontSize": 16,
   "cssTheme": "Minimal",
   "textFontFamily": "",
