--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -2,12 +2,13 @@
   "promptDelete": false,
   "alwaysUpdateLinks": true,
   "newFileLocation": "folder",
-  "newFileFolderPath": "rough",
+  "newFileFolderPath": "notes",
   "pdfExportSettings": {
     "includeName": true,
     "pageSize": "Letter",
     "landscape": false,
     "margin": "0",
     "downscalePercent": 100
-  }
+  },
+  "showUnsupportedFiles": true
 }
