--- a/.obsidian/appearance.json
+++ b/.obsidian/appearance.json
@@ -3,6 +3,6 @@
   "theme": "moonstone",
   "baseFontSize": 16,
   "cssTheme": "Minimal",
-  "textFontFamily": "",
+  "textFontFamily": "Geist",
   "interfaceFontFamily": "SF Pro"
 }
